# satellite_data_analysis

./: README.md  Task1.py  pdal-basics.ipynb  pipeline.json  pyproject.toml  setup.cfg
data/tif/: IA_FullState.tif
myscripts/: Task1.py
myscripts/.ipynb_checkpoints/: Task1-checkpoint.py
notebook/: Untitled.ipynb  pdal-basics.ipynb
notebook/.ipynb_checkpoints/: pdal-basics-checkpoint.ipynb
src/AgriTech_pkg/: .fuse_hidden00077c9100000003  IA_FullState.las  IA_FullState_Coordinates.csv  notebook.ipynb  pipeline.json  visualization.ipynb
src/AgriTech_pkg/.ipynb_checkpoints/: fetchLoad-checkpoint.py  notebook-checkpoint.ipynb  visualization-checkpoint.ipynb
src/AgriTeck_pkg_NatnaelSisay.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
