[metadata]
name = AgriTeck-pkg-NatnaelSisay
version = 0.0.1
author = Natnael Sisay
author_email = natyjava8@gmail.com
description = Simple python package for AgriTech internal use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NatnaelSisay/satellite_data_analysis
project_urls =
    Bug Tracker = https://github.com/NatnaelSisay/satellite_data_analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src